Started the cookbook

--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
-# $Id: Changes,v 1.101 2004/01/13 04:36:36 petdance Exp $
+# $Id: Changes,v 1.102 2004/01/27 02:42:49 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.72
 	[ENHANCEMENTS]
 	* Added the set_visible() method, thanks to Peter Scott.
+
+        [DOCUMENTATION]
+        * Started the Cookbook at WWW::Mechanize::Cookbook.pod.
 
 	[INTERNALS]
 	* Made the globbing in Makefile.PL a little less command-line
