--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.106 2004/02/29 05:29:09 petdance Exp $
+# $Id: Changes,v 1.107 2004/02/29 05:50:07 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.73_01
+0.73_01 Sat Feb 28 23:55:46 CST 2004
         [ENHANCEMENTS]
         * URLs in META REFRESH tags are now treated as links.
         * t/taint.t makes sure that things that should be tainted are.
