--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
-# $Id: Changes,v 1.116 2004/03/23 05:27:11 petdance Exp $
+# $Id: Changes,v 1.117 2004/03/28 04:39:26 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.75_01 Sat Mar 27 22:49:14 CST 2004
+
+        No changes.  Just reshuffled stuff around, and showed a diag so
+        that David Wheeler can tell me more stuff about why Mech isn't
+        working right.
 
 0.74    Mon Mar 22 23:36:46 CST 2004
         [ENHANCEMENTS]
