--- a/Changes
+++ b/Changes
@@ -1,10 +1,38 @@
-# $Id: Changes,v 1.123 2004/04/10 04:14:35 petdance Exp $
+# $Id: Changes,v 1.124 2004/04/10 05:34:32 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+1.00    Sat Apr 10 00:35:51 CDT 2004
+
+        I figure it's about time we hit 1.00, and this version seems
+        like a good place to do it, because of the potential breakage
+        described below...
+
+        [THINGS THAT WILL BREAK YOUR CODE]
+        * Header handling has changed.  There is no more package variable
+          %headers that holds all the headers to be added.  They are now
+          added on a per-object basis.
+
+          If you were adding a header with add_header(), and the code
+          relied on that header still being set later on in a later
+          instance of the variable, that code will now break, because
+          the later instance won't have the header set.
+
+        [ENHANCEMENTS]
+        * You can now prevent a header from being sent by adding it with
+          an undef value, as in:
+
+            $mech->add_header( Referer => undef );
+
+        [FIXES]
+        * Now correctly adds Accept-Encoding to all requests that need it.
 
         [INTERNALS]
         * Added new $mech->_modify_request($req) method to do all the
           HTTP header modification before the actual request gets
           sent off.  Subclasses are able to override it if they want.
+
+        * Removed the unused Compress::Zlib stuff.
+
 
 0.76    Wed Apr  7 22:01:43 CDT 2004
 
