--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.124 2004/04/10 05:34:32 petdance Exp $
+# $Id: Changes,v 1.125 2004/04/10 05:45:03 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 1.00    Sat Apr 10 00:35:51 CDT 2004
@@ -14,8 +14,8 @@ Revision history for Perl extension WWW::Mechanize
 
           If you were adding a header with add_header(), and the code
           relied on that header still being set later on in a later
-          instance of the variable, that code will now break, because
-          the later instance won't have the header set.
+          instance of the class, that code will now break, because the
+          later instance won't have the header set.
 
         [ENHANCEMENTS]
         * You can now prevent a header from being sent by adding it with
