--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
-# $Id: Changes,v 1.128 2004/04/14 03:46:57 petdance Exp $
+# $Id: Changes,v 1.129 2004/05/27 20:13:37 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+1.03_01 Thu May 27 15:13:10 CDT 2004
+
+        [ENHANCEMENTS]
+        * Finally added a value() func.  Thanks to Spoon, who even now,
+          months after his passing, is still contributing to Mechanize.
+
 
 1.02    Tue Apr 13 22:45:10 CDT 2004
 
