--- a/Changes
+++ b/Changes
@@ -1,20 +1,21 @@
-# $Id: Changes,v 1.133 2004/08/17 03:51:53 petdance Exp $
+# $Id: Changes,v 1.134 2004/09/16 02:42:21 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
+1.04
         [FIXES]
         * Fixed tests that fail under LWP >= 5.800.
+        * Added a workaround for LWP::UserAgent->clone() when ->{proxy}
+          is undef. (RT #6443)
 
         [DOCUMENTATION]
         * Added Ian Langworth's listmod and John Beppu's photobucket
           uploader programs to WWW::Mechanize::Examples.
+
         * Minor doc tweak for find_link()
 
-
-1.03_01 Thu May 27 15:13:10 CDT 2004
-
-        [ENHANCEMENTS] * Finally added a value() func.  Thanks to Spoon,
-        who even now,
-          months after his passing, is still contributing to Mechanize.
+        * Finally added a value() func.  Thanks to Spoon,
+          who even now, months after his passing, is still contributing
+          to Mechanize.
 
 
 1.02    Tue Apr 13 22:45:10 CDT 2004
