--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.137 2004/09/16 04:20:07 petdance Exp $
+# $Id: Changes,v 1.138 2004/09/16 04:29:39 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-1.04
+1.04    Wed Sep 15 23:27:53 CDT 2004
 
         [ENHANCEMENTS]
         * $mech->get() now accepts a WWW::Mechanize::Link object.
